[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tank_game"
version = "0.1.0"
description = "A simple Tank Battle game implemented in Python with pygame"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["pygame>=2.0"]
